# ofz-spread-analytics

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FUTURE_FEATURES.md  README.md  ROLLBACK.md  SESSION_CONTEXT.md  TODO.md  __init__.py  app.py  config.py  install.bat  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  test_app_ui.py  test_browser_state.py  test_g_spread.py  test_state_apptest.py  test_zcyc.py  test_zcyc_cache.py  version.py  worklog.md  результаты_ревизии.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: README.md  __init__.py  moex_bonds.py  moex_candles.py  moex_client.py  moex_history.py  moex_trading.py  moex_zcyc.py
components/: __init__.py  bond_manager.py  charts.py  db_panel.py  header.py  metrics.py  sidebar.py  signals.py  styles.py
core/: COINTEGRATION_API.md  __init__.py  backtest.py  cointegration.py  cointegration_service.py  data_storage.py  database.py  exceptions.py  ofz_cache.py  session.py  signals.py  spread.py  types.py  ytm_calculator.py
core/db/: __init__.py  bonds_repo.py  calendar_repo.py  connection.py  facade.py  g_spread_repo.py  spreads_repo.py  ytm_repo.py
data/: ofz_data.db
docs/: ARCHITECTURE.md
export/: __init__.py  formatters.py  signal_sender.py
models/: __init__.py  bond.py
modes/: __init__.py  base.py  intraday.py
services/: __init__.py  candle_processor_ytm_for_bonds.py  candle_service.py  data_loader.py  g_spread_calculator.py  spread_calculator.py  state_manager.py  trading_calendar.py
tests/: conftest.py  mock_streamlit.py  run_tests.py  test_app_integration.py  test_app_v030.py  test_bond_manager.py  test_bond_ytm_processor.py  test_bonds.py  test_candle_service.py  test_charts_v030.py  test_cointegration.py  test_cointegration_data.py  test_cointegration_service.py  test_data_loader.py  test_database.py  test_db_context_manager.py  test_db_migration.py  test_db_repositories.py  test_edge_cases.py  test_g_spread_calculator.py  test_hover_label.py  test_linked_zoom.py  test_metrics_signals.py  test_models_bond.py  test_moex_bonds.py  test_moex_client.py  test_ofz_cache.py  test_period_slider.py  test_plan_v030.md  test_sidebar.py  test_sidebar_v030.py  test_spread_analytics_chart.py  test_state_integration.py  test_state_manager.py  test_state_manager_url.py  test_trading_calendar.py  test_ui.py  test_ytm_calculation.py  test_zcyc_optimization.py
tests/manual/: test_app_full.py  test_app_ui.py  test_zcyc.py
tests/test_data/: cointegrated_pair.csv  not_cointegrated_pair.csv  stationary_pair.csv
utils/: __init__.py  action_logger.py  bond_utils.py
