[project]
name = "ofz-spread-analytics"
version = "0.2.2"
description = "OFZ Spread Analytics - анализ спредов ОФЗ"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OFZ Analytics Team"}
]
keywords = ["ofz", "bonds", "analytics", "moex", "ytm"]

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "pre-commit>=3.6.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "commitizen>=3.18.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["api", "components", "core", "models", "services", "export"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [".venv", "node_modules"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "ui: marks tests as UI tests (require running app)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*", "*/.venv/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true
changelog_file = "CHANGELOG.md"

[tool.commitizen.customize]
message_template = "{{change_type}}{% if scope %}({{scope}}){% endif %}: {{message}}"
schema = "<type>(<scope>): <subject>"
schema_pattern = "^(feat|fix|refactor|test|docs|style|chore|perf|ci|revert)(\\(.+\\))?!?:\\s.+"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Select the type of change:"
choices = [
    {value = "feat", name = "feat:     A new feature"},
    {value = "fix", name = "fix:      A bug fix"},
    {value = "refactor", name = "refactor: Code change without fix/feature"},
    {value = "test", name = "test:     Adding/updating tests"},
    {value = "docs", name = "docs:     Documentation changes"},
    {value = "style", name = "style:    Code style changes (formatting)"},
    {value = "chore", name = "chore:    Maintenance tasks"},
    {value = "perf", name = "perf:     Performance improvements"},
    {value = "ci", name = "ci:       CI/CD changes"},
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "scope"
message = "Scope (api, db, ui, ytm, charts, etc.):"

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Commit message:"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
